; ModuleID = '/home/carl/AnghaBench/micropython/ports/teensy/core/extr_pins_teensy.c_pulseIn.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/teensy/core/extr_pins_teensy.c_pulseIn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CORE_NUM_DIGITAL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pulseIn(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @CORE_NUM_DIGITAL, align 8
  %10 = icmp sge i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %25

12:                                               ; preds = %3
  %13 = load i64, i64* %6, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %12
  %16 = load i64, i64* %5, align 8
  %17 = call i32 @portInputRegister(i64 %16)
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @pulseIn_high(i32 %17, i32 %18)
  store i32 %19, i32* %4, align 4
  br label %25

20:                                               ; preds = %12
  %21 = load i64, i64* %5, align 8
  %22 = call i32 @portInputRegister(i64 %21)
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @pulseIn_low(i32 %22, i32 %23)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %20, %15, %11
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @pulseIn_high(i32, i32) #1

declare dso_local i32 @portInputRegister(i64) #1

declare dso_local i32 @pulseIn_low(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
